--- a/templates/livestream/livestream.html
+++ b/templates/livestream/livestream.html
@@ -42,7 +42,7 @@
                         <li class="list-unstyled">
                             <ul>
                                 <li class = active>
-                                    <a href="/livestreams_overview/{{camera}}">
+                                    <a href="/livestream/{{camera}}">
                                     <i class="tim-icons icon-video-66"></i>
                                     <p>{{camera}}</p>
                                     </a>
